--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Simon Says Game</h1>
     <h2>Press any key to start</h2>
+    <button id="startBtn">Start Game</button>
     <h4></h4>
     <div class="btn-container">
         <div class="line-one">
